--- a/homeworks/week5/hw2/msg_board_local.css
+++ b/homeworks/week5/hw2/msg_board_local.css
@@ -1,43 +1,96 @@
 .body{
-  background-color: pink;
+	background-color: #FFDBD4;
+	font-family: Arial;
 }
-.main{
-  max-width: 1080px;
-  height: 200px;
-  margin: 0px auto;
-  border: 2px solid black;
-  
-}
-
-#main__username{
-  width: 600px;
-  height: 20px;
-  border: 2px solid red;
-}
-#main__hashtags{
-  width: 600px;
-  height: 20px;
-  border: 2px solid blue;
-  background-color: pink;
-}
-
-.msg{
-  width: 1080px;
-  margin: 0px auto;
-  border: 1px solid black;
-  background-color: #ffffff;
+.h1{
+	margin-top: 20px;
+	text-align: center;
 }
 .title{
+	border-bottom: 1px solid #C0C0C0;
 }
+.msg{
+	margin: 5px auto;
+	max-width: 1080px;
 
+}
+.user__msg input{
+	margin-top: 3px;
+	font-size: 16px;
+}
 .userMsg{
-  width: 600px;
-  height: 200px;
-  border: 1px solid red;
+	width: 900px;
+	margin: 5px auto;
+/*	border: 2px solid orange;*/
+	height: 180px;
+	font-size: 16px;
 }
 
-.user__pic img{
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
+
+.main{
+	margin: 0 auto;
+	padding: 20px;
+	text-align: top;
+	max-width: 1080px;
+	background-color: white;
+	font-size: 18px;
+	box-sizing: border-box;
+
 }
+
+.wrap{
+	display: flex;
+	justify-content: space-between;
+}
+.main__username{
+	width: 100px;
+
+}
+.main__time{
+	padding: 4px;
+}
+
+.main__hashtags{
+	color: #919191;
+	width: 1020px;
+	border-bottom: 1px solid #C0C0C0;
+}
+
+.main__content{
+	max-width: 1000px;
+	margin: 10px auto;
+}
+
+.child{
+	background-color: #EBEBEB;
+	max-width: 980px;
+	margin: 20px 0px 10px 80px;
+	padding: 10px;
+	box-sizing: border-box;
+
+
+}
+
+.child__content{
+	margin-top: 5px;
+	padding: 10px 0px 30px 10px;
+	border-top: 1px solid #C0C0C0;
+}
+textarea{
+	margin-top: 4px;
+	width: 300px;
+	height: 80px;
+}
+.child__form{
+	margin-left: 40px;
+}
+
+input.child__submit{
+	width: 40px;
+	height: 20px;
+	background-color: pink;
+	position: relative;
+	bottom: 6px;
+
+
+
