--- a/homeworks/week5/hw2/msg_board_local.css
+++ b/homeworks/week5/hw2/msg_board_local.css
@@ -1,26 +1,56 @@
 .body{
 	background-color: #FFDBD4;
 	font-family: Arial;
+	background-image: url('/CodeWithJoy/whales_x912.jpg');
+	background-size: 50%;
+
 }
+
 .h1{
 	margin-top: 20px;
+	margin-bottom: 0px;
 	text-align: center;
+	font-size: 42px;
+}
+div.logoutBtn{
+	display: flex;
+	justify-content: flex-end;
+	position: relative;
+	right: 20px;
+	border-radius: 5px;
+}
+.logout{
+	width: 80px;
+	height: 40px;
+	background-color: rgb(165, 157, 212);
+	color: white;
+	font-size: 16px;
+}
+.logout:hover {
+	cursor: pointer;
 }
 .title{
 	border-bottom: 1px solid #C0C0C0;
 }
 .msg{
-	margin: 5px auto;
-	max-width: 1080px;
+	margin: 10px auto;
+	padding: 10px 20px;
+	max-width: 900px;
+	background-color: rgb(161, 161, 189);
+	opacity: 0.8;
 
+}
+.user__name{
+	font-weight: bold;
+	font-size: 20px;
 }
 .user__msg input{
 	margin-top: 3px;
 	font-size: 16px;
 }
 .userMsg{
-	width: 900px;
-	margin: 5px auto;
+	width: 800px;
+	margin: 10px auto;
 /*	border: 2px solid orange;*/
 	height: 180px;
 	font-size: 16px;
@@ -28,8 +58,9 @@
 
 
 .main{
-	margin: 0 auto;
+	margin: 20px auto;
 	padding: 20px;
+	border: 3px solid rgb(120, 145, 184);
 	text-align: top;
 	max-width: 1080px;
 	background-color: white;
@@ -91,6 +122,110 @@ input.child__submit{
 	background-color: pink;
 	position: relative;
 	bottom: 6px;
+}
 
+/* 註冊介面CSS */
+.regisBody{
+	font-family: Arial;
+	margin: 0px;
+	-webkit-background-size: 100%;
+	background-size: 100%;
+}
 
+.registerBgi img{
+	position: absolute;
+	top: 0px;
+	width: 100%;
+	height:640px;
+	z-index: -1;
+	opacity: 0.4;
+}
 
+.regisMain{
+	position: relative;
+	top: 15px;
+	opacity: 0.85;
+	width: 400px;
+	height: 550px;
+	margin: 10px auto;
+	background-color: white;
+	padding: 20px;
+
+}
+.regisMain h1,h2{
+	text-align: center;
+}
+.regisMain h1{
+	margin-top: 120px;
+}
+h2{
+	font-size: 18px;
+	margin-top: -15px;
+	margin-bottom: 25px;
+}
+
+.forget{
+	display: block;
+	text-align: center;
+}
+
+/*登入頁面CSS*/
+.loginBody{
+	font-family: Arial;
+	margin: 0px;
+	-webkit-background-size: 100%;
+	background-size: 100%;
+}
+
+.loginBgi img{
+	position: absolute;
+	top: 0px;
+	width: 100%;
+	height:640px;
+	z-index: -1;
+	opacity: 0.4;
+}
+
+.loginMain{
+	position: relative;
+	top: 15px;
+	opacity: 0.85;
+	width: 400px;
+	height: 550px;
+	margin: 10px auto;
+	background-color: white;
+	padding: 20px;
+
+}
+.loginMain h1,h2{
+	text-align: center;
+}
+.loginMain h1{
+	margin-top: 120px;
+}
+
+.forget{
+	display: block;
+	text-align: center;
+}
+
+.allBtn{
+	margin-top: 28px;
+	font-size: 14px;
+	background-color:rgb(25, 25, 104);
+	color: white;
+	width: 75px;
+	height: 30px;
+	border-radius: 5px;
+
+}
+
+.regisForm, .loginForm{
+	margin: 0px auto;
+	text-align: center;
+}
+
+h4{
+	color: rgb(153, 12, 13);
+	text-align: center;
+}
