--- a/homeworks/week7/hw3/msg_board_local.css
+++ b/homeworks/week7/hw3/msg_board_local.css
@@ -289,7 +289,9 @@ position: absolute;
 	text-align: center;
 }
 
-h4{
+.loginWarning{
+	margin-top: 6px;
+	font-size: 18px;
 	color: rgb(153, 12, 13);
 	text-align: center;
 }
